@@ -1,6 +1,7 @@
 * 2013-08-13 - thorben.betten@open-xchange.com
 
  - Fix for bug 23992: Introduced property to disable folder caches in IMAP
+ - Fix for bug 26023: Specify supported SSL protocols on secure connect attempt
 
 * 2013-08-12 - thorben.betten@open-xchange.com
 
